# opencv_utils

./: .gitignore  mainwindow.cpp  mainwindow.ui
AdaptiveThresholdTool/: adapt_thresh_gui.pro  mainwindow.h
DrillHoleInspector/: CMakeLists.txt  main.cpp
LineWidthMeasTool/: grabber.cpp  grabber.h  line_width_tool.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  tools.cpp  tools.h
PatternFinder/: PatternFinder.pro  mainwindow.cpp  mainwindow.ui
mesh2octo/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
